tests/bad/bad_arg_type_reg.s
.name "coucou"
.comment "coucou"

label:
    live r1
